--- a/source/changelogs/v4.0.0-alpha.4.rst
+++ b/source/changelogs/v4.0.0-alpha.4.rst
@@ -1,14 +1,14 @@
 Version 4.0.0-alpha.4
 ====================================================
 
-Release Date: Not released
+Release Date: Dec 15, 2018
 
 **Next alpha release of CodeIgniter4**
 
 Highlights:
 
 - Refactor for consistency: folder application renamed to app;
-constant BASEPATH renamed to SYSTEMPATH
+    constant BASEPATH renamed to SYSTEMPATH
 - Debug toolbar gets its own config, history collector
 - Numerous corrections and enhancements
 
@@ -38,6 +38,7 @@ The list of changed files follows, with PR numbers shown.
 
 - public/
 	- index #1579
+
 - system/
 	- Autoloader/
 		- Autoloader #1562
