--- a/source/changelogs/v4.0.3.rst
+++ b/source/changelogs/v4.0.3.rst
@@ -5,7 +5,7 @@ Release Date: May 1, 2020
 
 **4.0.3 release of CodeIgniter4**
 
-Thanks to the community, there have been 72 bugs fixed, 21 issues closed, and 82 merged pull requests. These are all
+Thanks to the community, there have been 74 bugs closed, 21 issues closed, and 88 merged pull requests. These are all
 listed in the `changelog <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md/>`_. This is a small
 representation of some of the bigger changes you should know about.
 
