--- a/source/changelogs/v4.0.4.rst
+++ b/source/changelogs/v4.0.4.rst
@@ -5,11 +5,11 @@ Release Date: Unreleased
 
 **4.0.4 release of CodeIgniter4**
 
-The location for the SQLite3 database has changed and by default will be now located in a ``./data`` folder instead of the ``public`` folder.
+The location for the SQLite3 database has changed and by default will be now located in a ``writable`` folder instead of the ``public`` folder.
 
 Enhancements:
 
 
 Bugs Fixed:
 
-- Fixed location for the SQLite3 database which by default will be now located in a ``./data`` folder instead of the ``public`` folder.
+- Fixed location for the SQLite3 database which by default will be now located in a ``writable`` folder instead of the ``public`` folder.
