--- a/source/changelogs/v4.0.4.rst
+++ b/source/changelogs/v4.0.4.rst
@@ -52,6 +52,8 @@ Bugs Fixed:
 - Fixed bug in Image GD handler that would try to compress images twice in certain cases
 - Ensure get translation output logic work on selected locale, dashed locale, and fallback "en"
 - Fix is_unique/is_not_unique validation called on POST/PUT via API in Postgresql
+- Added ``$arguments`` parameter to after() and before() in FilterInterface
+- Fixed a bug where filter arguments were not passed to after()
 
 
 
