--- a/source/changelogs/v4.1.0.rst
+++ b/source/changelogs/v4.1.0.rst
@@ -7,4 +7,4 @@ Release Date: Not released
 
 Removed:
 
-- `Autoloader::loadLegacy()` method was previously used for migration non-namespaced classes transition to CodeIgniter v4. Since `4.1.0`, this support removed.
+- `Autoloader::loadLegacy()` method was previously used for migration of non-namespaced classes in transition to CodeIgniter v4. Since `4.1.0`, this support was removed.
