Deprecate migrate:create for make:migration

--- a/source/changelogs/v4.0.5.rst
+++ b/source/changelogs/v4.0.5.rst
@@ -22,3 +22,4 @@ Deprecations:
 
 - Deprecated ``BaseCommand::getPad`` in favor of ``BaseCommand::setPad``.
 - Deprecated ``Config\Format::getFormatter`` in favor of ``CodeIgniter\Format\Format::getFormatter``
+- Deprecated ``migrate:create`` command in favor of ``make:migration`` command.
