--- a/source/changelogs/v4.1.2.rst
+++ b/source/changelogs/v4.1.2.rst
@@ -4,3 +4,9 @@ Version 4.1.2
 Release Date: Not released
 
 **4.1.2 release of CodeIgniter4**
+
+Enhancements/Additions
+----------------------
+
+- New `assertRedirectedTo()` assertion available for HTTP tests.
+
