Enhancements to ErrorlogHandler

--- a/source/changelogs/v4.1.2.rst
+++ b/source/changelogs/v4.1.2.rst
@@ -8,6 +8,7 @@ Release Date: Not released
 Enhancements:
 
 - New HTTP classes, ``Cookie`` and ``CookieStore``, for abstracting web cookies.
+- New logger handler, ``ErrorlogHandler``, that writes to ``error_log()``.
 
 Changes:
 
