Bug 4069 - query returns Result even when query result is FALSE (#4176)
* Initial commit fixing wrong return value in Database/BaseConnection::query. When underlying resultID if false, this should return false. Added BadQueryTest to tests.

* changes to make query() function return boolean for write-type queries. centralize isWriteType functionality in one place. Change tests impacted by this change

* improved BadQueryTest, simplified return value in BaseUtils::optimizeTable

* tiny change made by record...remove of one line in ConnectionInterface

* Removed static sqlIsWriteType method from Query class and instead to mimic CI3 added isWriteType declaration to ConnectionInterface, defined isWriteType fn in BaseConnection, added specific isWriteType to Postgres, modified various unit tests, and added WriteTypeQueryTest.

* Added RENAME back into BaseConnectin::isWriteType check and moved EXEC sp_rename into SQLSRV\Connection, tweaked WriteTypeQueryTest

* Tweaked BadQueryTest and DBUtilsTest to alter/restore DBDebug value for certain tests. Added changelog and upgrade notes.

* Update upgrade_412.rst

remove incorrect markdown

--- a/source/changelogs/v4.1.2.rst
+++ b/source/changelogs/v4.1.2.rst
@@ -25,3 +25,7 @@ Deprecations:
 - Deprecated cookie-related properties of ``Session`` in order to use the ``Cookie`` class.
 - Deprecated ``Security::isExpired()`` to use the ``Cookie``'s internal expires status.
 - Deprecated ``CIDatabaseTestCase`` to use the ``DatabaseTestTrait`` instead.
+
+Bugs Fixed:
+
+- ``BaseConnection::query()`` now returns ``false`` for failed queries (unless ``DBDebug==true``, in which case an exception will be thrown) and returns boolean values for write-type queries as specified in the docs.
