--- a/source/changelogs/v4.1.2.rst
+++ b/source/changelogs/v4.1.2.rst
@@ -10,6 +10,7 @@ Enhancements:
 - New HTTP classes, ``Cookie`` and ``CookieStore``, for abstracting web cookies.
 - New logger handler, ``ErrorlogHandler``, that writes to ``error_log()``.
 - Entity. Added custom type casting functionality.
+- New option in routing. The ``priority`` option lower the priority of specific route processing.
 
 Changes:
 
