Updated the changelog to include the ResponseTrait::failValidationError deprecation.

--- a/source/changelogs/v4.1.2.rst
+++ b/source/changelogs/v4.1.2.rst
@@ -37,6 +37,7 @@ Deprecations:
 - Deprecated ``FeatureTestCase`` to use the ``FeatureTestTrait`` instead.
 - Deprecated ``ControllerTester`` to use the ``ControllerTestTrait`` instead.
 - Consolidated and deprecated ``ControllerResponse`` and ``FeatureResponse`` in favor of ``TestResponse``.
+- Deprecated ``\API\ResponseTrait::failValidationError`` to use ``\API\ResponseTrait::failValidationErrors`` instead
 
 Bugs Fixed:
 
