--- a/source/changelogs/v4.2.0.rst
+++ b/source/changelogs/v4.2.0.rst
@@ -8,6 +8,7 @@ Release Date: Not released
 Enhancements:
 
 - Added Cache config for reserved characters
+- The ``addForeignKey`` function of the ``Forge`` class can now define composite foreign keys in an array
 
 Changes:
 
