--- a/source/changelogs/v4.1.4.rst
+++ b/source/changelogs/v4.1.4.rst
@@ -4,3 +4,31 @@ Version 4.1.4
 Release Date: Not released
 
 **4.1.4 release of CodeIgniter4**
+
+Breaking Changes:
+
+The following methods were changed from "public" to "protected" to match their parent class methods and better align with their uses:
+
+* CodeIgniter4\Database\MySQLi\Connection::execute()
+* CodeIgniter4\Database\MySQLi\Connection::_fieldData()
+* CodeIgniter4\Database\MySQLi\Connection::_indexData()
+* CodeIgniter4\Database\MySQLi\Connection::_foreignKeyData()
+* CodeIgniter4\Database\Postgre\Builder::_like_statement()
+* CodeIgniter4\Database\Postgre\Connection::execute()
+* CodeIgniter4\Database\Postgre\Connection::_fieldData()
+* CodeIgniter4\Database\Postgre\Connection::_indexData()
+* CodeIgniter4\Database\Postgre\Connection::_foreignKeyData()
+* CodeIgniter4\Database\SQLSRV\Connection::execute()
+* CodeIgniter4\Database\SQLSRV\Connection::_fieldData()
+* CodeIgniter4\Database\SQLSRV\Connection::_indexData()
+* CodeIgniter4\Database\SQLSRV\Connection::_foreignKeyData()
+* CodeIgniter4\Database\SQLite3\Connection::execute()
+* CodeIgniter4\Database\SQLite3\Connection::_fieldData()
+* CodeIgniter4\Database\SQLite3\Connection::_indexData()
+* CodeIgniter4\Database\SQLite3\Connection::_foreignKeyData()
+* CodeIgniter4\Images\Handlers\GDHandler::_flatten()
+* CodeIgniter4\Images\Handlers\GDHandler::_flip()
+* CodeIgniter4\Images\Handlers\ImageMagickHandler::_flatten()
+* CodeIgniter4\Images\Handlers\ImageMagickHandler::_flip()
+* CodeIgniter4\Test\Mock\MockIncomingRequest::detectURI()
+* CodeIgniter4\Test\Mock\MockSecurity.php::sendCookie()
