--- a/source/changelogs/v4.1.5.rst
+++ b/source/changelogs/v4.1.5.rst
@@ -1,28 +1,35 @@
 Version 4.1.5
-=============
+#############
 
 Release Date: Not released
 
 **4.1.5 release of CodeIgniter4**
 
-BREAKING:
+.. contents::
+    :local:
+    :depth: 1
 
-Fixed `a bug <https://github.com/codeigniter4/CodeIgniter4/issues/2913>`_ on CSRF protection.
-Now CSRF protection works on PUT/PATCH/DELETE requests when CSRF filter is applied.
-If you use such requests, you need to send CSRF token.
+BREAKING
+========
 
-Enhancements:
+- Fixed `a bug <https://github.com/codeigniter4/CodeIgniter4/issues/2913>`_ on CSRF protection. Now CSRF protection works on PUT/PATCH/DELETE requests when CSRF filter is applied. If you use such requests, you need to send CSRF token.
+
+Enhancements
+============
 
 - Added Cache config for reserved characters
 - The ``addForeignKey`` function of the ``Forge`` class can now define composite foreign keys in an array
 - The ``dropKey`` function of the ``Forge`` class can remove key
 
-Changes:
+Changes
+=======
 
 - Always escape identifiers in the ``set``, ``setUpdateBatch``, and ``insertBatch`` functions in ``BaseBuilder``.
 
-Deprecations:
+Deprecations
+============
 
 - Deprecated ``CodeIgniter\\Cache\\Handlers\\BaseHandler::RESERVED_CHARACTERS`` in favor of the new config property
 
-Bugs Fixed:
+Bugs Fixed
+==========
