--- a/source/changelogs/v4.1.5.rst
+++ b/source/changelogs/v4.1.5.rst
@@ -14,6 +14,8 @@ BREAKING
 
 - Fixed `a bug <https://github.com/codeigniter4/CodeIgniter4/issues/2913>`_ on CSRF protection. Now CSRF protection works on PUT/PATCH/DELETE requests when CSRF filter is applied. If you use such requests, you need to send CSRF token.
 - In the previous version, if you didn't provide your own headers, ``CURLRequest`` would send the request-headers from the browser, due to a bug. As of this version, it does not send them.
+- Fixed ``BaseBuilder::insertBatch()`` return value. Now it returns SQL string array instead of wrong affected row number when testMode.
+- Because of the optimization, when ``BaseBuilder::insertBatch()`` and ``BaseBuilder::updateBatch()`` are used, the return value of ``$query->getOriginalQuery()`` changed.
 
 Enhancements
 ============
