--- a/source/changelogs/v4.1.5.rst
+++ b/source/changelogs/v4.1.5.rst
@@ -1,7 +1,7 @@
 Version 4.1.5
 #############
 
-Release Date: Not released
+Release Date: November 8, 2021
 
 **4.1.5 release of CodeIgniter4**
 
@@ -33,6 +33,3 @@ Deprecations
 ============
 
 - Deprecated ``CodeIgniter\\Cache\\Handlers\\BaseHandler::RESERVED_CHARACTERS`` in favor of the new config property
-
-Bugs Fixed
-==========
