docs: update changelogs/v4.1.5.rst

--- a/source/changelogs/v4.1.5.rst
+++ b/source/changelogs/v4.1.5.rst
@@ -23,6 +23,14 @@ Enhancements
 - Added Cache config for reserved characters
 - The ``addForeignKey`` function of the ``Forge`` class can now define composite foreign keys in an array
 - The ``dropKey`` function of the ``Forge`` class can remove key
+- Now ``_`` can be used as separators in environment variable
+- Added Multiple filters for a route and Classname filter
+- Reduced memory usage of ``insertBatch()`` and ``updateBatch()``
+- Added Session based CSRF Protection
+- Added ``valid_url_strict`` rule for ``Validation``
+- Debug Toolbar
+    - Added formatted query string to timeline
+    - Improved keyword highlighting and escaping of query strings
 
 Changes
 =======
@@ -33,3 +41,8 @@ Deprecations
 ============
 
 - Deprecated ``CodeIgniter\\Cache\\Handlers\\BaseHandler::RESERVED_CHARACTERS`` in favor of the new config property
+
+Bugs Fixed
+==========
+
+See the repo's `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_ for a complete list of bugs fixed.
