--- a/source/changelogs/v4.1.6.rst
+++ b/source/changelogs/v4.1.6.rst
@@ -14,6 +14,7 @@ BREAKING
 
 Enhancements
 ============
+- Database pane on debug toolbar now displays location where Query was called from. Also displays full backtrace.
 
 Changes
 =======
