docs: fix by proofreading
Co-authored-by: John Paul E. Balandan, CPA <51850998+paulbalandan@users.noreply.github.com>

--- a/source/changelogs/v4.1.6.rst
+++ b/source/changelogs/v4.1.6.rst
@@ -19,7 +19,7 @@ Validation changes
 ------------------
 - The previous version of the Validation can't handle an array item.
   Because of the bug fix, the validation results may be different,
-  or raise an TypeError.
+  or raise a ``TypeError``.
   But the previous version's results are probably incorrect.
 - The Validation separated the validation process of multiple field
   like ``contacts.*.name`` and single field.
