docs: depreacted Seeder::faker()
See #5456

--- a/source/changelogs/v4.1.6.rst
+++ b/source/changelogs/v4.1.6.rst
@@ -42,6 +42,8 @@ Changes
 Deprecations
 ************
 
+- ``Seeder::faker()`` and ``Seeder::$faker`` are deprecated.
+
 Sending Cookies
 ===============
 
