Validation: support placeholders for anything

--- a/source/changelogs/v4.2.0.rst
+++ b/source/changelogs/v4.2.0.rst
@@ -12,6 +12,7 @@ Release Date: Not Released
 BREAKING
 ********
 
+- The method signature of ``Validation::setRule()`` has been changed. The ``string`` typehint on the ``$rules`` parameter was removed. Extending classes should likewise remove the parameter so as not to break LSP.
 
 
 Enhancements
