--- a/source/changelogs/v4.1.6.rst
+++ b/source/changelogs/v4.1.6.rst
@@ -39,6 +39,7 @@ Enhancements
 
 - Database pane on debug toolbar now displays location where Query was called from. Also displays full backtrace.
 - :ref:`Subqueries <query-builder-where-subquery>` in QueryBuilder can now be an instance of the BaseBuilder class.
+- Kint was updated from ^3.3 to ^4.0.
 
 Changes
 *******
