--- a/source/changelogs/v4.0.0-beta.2.rst
+++ b/source/changelogs/v4.0.0-beta.2.rst
@@ -232,7 +232,7 @@ PRs merged:
 - #1839 Dont replace slashes with backslashes in the to route
 - #1836 Test: Improve View\View coverage
 - #1831 Fix some PHPDoc comments error
-- #1829 Improve: Models now require a primary key. This is partially to keep the code …
+- #1829 Improve: Models now require a primary key. This is partially to keep the code ...
 - #1828 Fix: Remove bootstrap styles from validation views.
 - #1827 Fix: Adding include method to View library to render view partials... views.
 - #1823 Docs: Remove legacy Bootstrap references in Pagination class
