--- a/source/changelogs/v4.0.0-beta.4.rst
+++ b/source/changelogs/v4.0.0-beta.4.rst
@@ -189,7 +189,7 @@ PRs merged:
 - #2005 Plugin closures docs update and test
 - #2004 Allow hasChanged() without parameter
 - #2002 Entity Refactor
-- #1999 use CodeIgniter\Controller; not needed since Home Controller extends …
+- #1999 use CodeIgniter\Controller; not needed since Home Controller extends ...
 - #1996 Attempting to fix CURLRequest debug issue. #1994
 - #e21823 Corrected docs for parser plugins. Closes #1995
 - #1989 argument set() must by type of string - cannot agree
