docs: add link to the detailed page

--- a/source/changelogs/v4.2.0.rst
+++ b/source/changelogs/v4.2.0.rst
@@ -27,7 +27,7 @@ Enhancements
     - Added the config ``$autoNonce`` in ``Config\ContentSecurityPolicy`` to disable the CSP placeholder replacement
     - Added the functions ``csp_script_nonce()`` and ``csp_style_nonce()`` to get nonce attributes
     - See :ref:`content-security-policy` for details.
-- New View Decorators allow modifying the generated HTML prior to caching.
+- New :doc:`../outgoing/view_decorators` allow modifying the generated HTML prior to caching.
 - Added Subqueries in the FROM section. See :ref:`query-builder-from-subquery`.
 - Added Subqueries in the SELECT section. See :ref:`query-builder-select`.
 - Added Validation Strict Rules. See :ref:`validation-traditional-and-strict-rules`.
